--- a/web-cotefe-net/templates/experimentres.ejs
+++ b/web-cotefe-net/templates/experimentres.ejs
@@ -111,7 +111,7 @@
 								    	
 								    	
 								    	
-								        <table class="shadow-dark">
+								        <table class="shadow-dark" id="psTable">
 								        	<tbody>
 								        	<tr><th>PropertySet Name</th><th class="edit-delete-box">Delete</th></tr>
     										<%
@@ -131,7 +131,7 @@
 								       <div>
 								    		<details class="exp-set">
 								    		<summary><div class="headings"><h1><span>New VirtualNodeGroup</span></h1></div></summary>		
-											<form action="#">
+											<form action="#" id="virtualnodegroupform">
 													<input type="hidden" value="New" name="formFun">
 												 <p>
 						                            <label for="name">VirtualNodeGroup Name</label>
@@ -198,7 +198,7 @@
 								    	</div>
 								       
 								       
-								       <table class="shadow-dark">
+								       <table class="shadow-dark" id="VGNtable">
 								        	<tbody><tr><th>Title</th><th>No. Node</th><th class="edit-delete-box">Edit</th><th class="edit-delete-box">Delete</th></tr>
     										<%
     											
@@ -213,7 +213,7 @@
 								       <div>
 								    		<details class="exp-set">
 								    		<summary><div class="headings"><h1><span>Install Image</span></h1></div></summary>		
-											<form action="#">
+											<form action="#" >
 													<input type="hidden" value="New" name="formFun">
 												<p>
 						                            <label for="selectboxplat">Images </label>
