--- a/web-cotefe-net/templates/experimentres.ejs
+++ b/web-cotefe-net/templates/experimentres.ejs
@@ -199,12 +199,12 @@
 								       
 								       
 								       <table class="shadow-dark" id="VGNtable">
-								        	<tbody><tr><th>Title</th><th>No. Node</th><th class="edit-delete-box">Edit</th><th class="edit-delete-box">Delete</th></tr>
+								        	<tbody><tr><th>Title</th><th>No. Node</th><th class="edit-delete-box">Delete</th></tr>
     										<%
     											
     										  for(i=0;i<model.virtual_node_groups.length;i++)
     										{
-    										 %><tr><td><%=model.virtual_node_groups[i].name%></td><td ><%=model.virtual_node_groups[i].virtual_node_count%></td><td><a href="<%=model.virtual_node_groups[i].uri %>" class="edit">Edit</a></td><td class="delete"><a href="<%=model.virtual_node_groups[i].uri %>" class="delete">Delete</a></td></tr><%
+    										 %><tr><td><%=model.virtual_node_groups[i].name%></td><td ><%=model.virtual_node_groups[i].virtual_node_count%></td><td class="delete"><a href="<%=model.virtual_node_groups[i].uri %>" class="delete">Delete</a></td></tr><%
     										 	}
     										 %>							    
 								        </tbody></table>
@@ -217,7 +217,7 @@
 													<input type="hidden" value="New" name="formFun">
 												<p>
 						                            <label for="selectboxplat">Images </label>
-						                            <select name="selectboxplat" id="selectboxplat">
+						                            <select name="selectboxplat" id="selectboximg">
 																<option value="Image1">Image1</option>
 						                                    	<option value="Image2">Image2</option>
 						                                    	<option value="Image3">Image3</option>
@@ -234,14 +234,55 @@
 								    	</div>
 								    </div>
 								    <div id="tab4" class="tab_content" style="display: none; ">
-								       <table class="shadow-dark">
-								        	<tbody><tr><th>Title</th><th>Date</th><th class="edit-delete-box">Edit</th><th class="edit-delete-box">Delete</th></tr>
-    										<tr><td>Task1</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Task2</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Task3</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Task4</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Task5</td><td>Date</td><td>Edit</td><td>Delete</td></tr>
-    										<tr><td>Task6</td><td>Date</td><td>Edit</td><td>Delete</td></tr>								    
+								    <details class="exp-set">
+								    		<summary><div class="headings"><h1><span>New Virtual Task</span></h1></div></summary>		
+											<form action="#" id="virtualtaskform">
+													<input type="hidden" value="New" name="formFun">
+												 <p>
+						                            <label for="name">Virtual Task Name</label>
+						                            <input class="input-small" type="text" value="" name="name" id="name" placeholder="Virtual Task Name">
+						                        </p>
+						                        <p>
+						                            <label for="description">Virtual Task Description</label>
+						                            <textarea name="description" id="description" cols="60" rows="15" placeholder="Virtual Task Description"></textarea>
+						                        </p>
+						                        <p>
+						                            <label for="selectboxplat">Method </label>
+						                            <select name="method" id="selectboxplat">
+																<option value="PUT">PUT</option>						                                  
+						                            </select>
+						                        </p>
+						                        <p>
+						                            <label for="selectboxplat">Virtual Node Group </label>
+						                            <select name="target" id="selectboxvgn">
+											            <%
+											            	
+											            	for(var i=0;i<model.virtual_node_groups.length;i++){
+											            		%>
+											            		<option value="<%=model.virtual_node_groups[i].uri %>"><%=model.virtual_node_groups[i].name  %></option>
+											            		<%
+											            	}
+											            %>			                                  
+						                            </select>
+						                        </p>
+						                      
+												<p>
+						                            <input class="button shadow-dark" name="submit" type="submit" value="Submit">
+						                       </p>
+											</form>	
+											</details>
+								    
+								    
+								    
+								       <table class="shadow-dark" id="virtualTaskTable">
+								        	<tbody><tr><th>Title</th><th class="edit-delete-box">Delete</th></tr>
+    										<%
+    											
+    										  for(i=0;i<model.virtual_tasks.length;i++)
+    										{
+    										 %><tr><td><%=model.virtual_tasks[i].name%></td><td class="delete" width="30%"><a href="<%=model.virtual_tasks[i].uri %>" class="delete">Delete</a></td></tr><%
+    										 	}
+    										 %>								    
 								        </tbody></table>
 								    </div>
 								</div>
