--- a/web-cotefe-net/templates/dashboard.ejs
+++ b/web-cotefe-net/templates/dashboard.ejs
@@ -21,7 +21,7 @@
 								        <%= exptable %>
 								    </div>
 								    <div id="tab3" class="tab_content">
-								       Here comes Job List
+								        <%= jobtable %>
 								    </div>
 								    <div id="tab4" class="tab_content">
 								       <%= imageTable %>
