--- a/web-cotefe-net/templates/tableModel.ejs
+++ b/web-cotefe-net/templates/tableModel.ejs
@@ -15,7 +15,7 @@
 						<td><%= objects[i].name %></td>						
 						
 						<td><a href="<%= objects[i].uri %>" class="edit"  >Edit</a></td>
-						<td><a href="<%= objects[i].uri %>" class="delete"  >Delete</a></td>
+						<td width="10%"><a href="<%= objects[i].uri %>" class="delete"  >Delete</a></td>
 					</tr>
 			<% }
 		}
